Remove ask for donation

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -256,3 +256,9 @@ body > .header { position: fixed !important; }
 @media all and (max-width : 1090px) { 
 	.tip-button { display: none;}
 }
+
+/* SIT */
+
+#box-donation {
+    display: none;
+}
