--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -260,5 +260,5 @@ body > .header { position: fixed !important; }
 /* SIT */
 
 #box-donation, .menu-local-pools-box, .menu-local-miner-box, #box-local-pools, #box-local-miner, #menu-donation-box, #customer-miners-box {
-    display: none;
+    display: none !important;
 }
